# myproject

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
.devcontainer/: .env  Dockerfile.dev  check_docker_rootless.sh  devcontainer.json  docker-compose.yml  entrypoint.sh  init.sh  init_post_attach.sh  init_post_create.sh
src/myproject/: __about__.py  __init__.py
