[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "myproject"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [{ name = "Alexandros Ladas", email = "alexandros@getml.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["getml"]

[tool.hatch.envs.default]
installer = "uv"
python = "3.12"

[project.urls]
Documentation = "https://github.com/Alexandros Ladas/myproject#readme"
Issues = "https://github.com/Alexandros Ladas/myproject/issues"
Source = "https://github.com/Alexandros Ladas/myproject"

[tool.hatch.version]
path = "src/myproject/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = ["mypy>=1.0.0"]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/myproject tests}"

[tool.coverage.run]
source_pkgs = ["myproject", "tests"]
branch = true
parallel = true
omit = ["src/myproject/__about__.py"]

[tool.coverage.paths]
myproject = ["src/myproject", "*/myproject/src/myproject"]
tests = ["tests", "*/myproject/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
